# en-libar

./: .gitignore  =1.7.6  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
assets/desktop/: hello-world-app.desktop
docs/: AI_SETUP.md  README.md
scripts/: install.sh  install_hotkey_deps.sh  setup_wayland_hotkey.sh  test_ai_comprehensive.py  test_hotkey.sh  uninstall.sh
src/hello_world_app/: __init__.py  main.py
src/hello_world_app/core/: __init__.py  app.py  config.py  config_manager.py  dbus_service.py  hotkey_manager.py  vocabulary_manager.py
src/hello_world_app/gui/: __init__.py  main_window.py  settings_window.py  system_tray.py  vocabulary_window.py
src/hello_world_app/utils/: ai_helper.py  helpers.py
tests/: __init__.py  test_main.py
